--- a/01-gallery.html
+++ b/01-gallery.html
@@ -8,8 +8,8 @@
   <title>Image gallery</title>
 
 
-  <link rel="stylesheet" href="css/common.css" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="./css/common.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css">
 </head>
 
@@ -22,7 +22,7 @@
 
   <div class="gallery"></div>
 
-  <script src="js/01-gallery.js" type="module"></script>
+  <script src="./js/01-gallery.js" type="module"></script>
   <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
 </body>
 
