--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>SimpleLightbox library</title>
-  <link rel="stylesheet" href="css/common.css" />
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="./css/common.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
   <link rel="stylesheet" href="./css/simple-lightbox.min.css" />
 
 </head>
@@ -18,7 +18,7 @@
   <!-- Add gallery items to this list -->
   <ul class="gallery"></ul>
 
-  <script src="js/02-lightbox.js" type="module"></script>
+  <script src="./js/02-lightbox.js" type="module"></script>
   <script src="./js/simple-lightbox.min.js"></script>
 </body>
 
